3. Личный проект: начинаем программировать

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
             <h2 class="visually-hidden">Switch trip view</h2>
             <!-- Меню -->
 
-            <h2 class="visually-hidden">Filter events</h2>
+            <h2 class="trip-controls__header visually-hidden">Filter events</h2>
             <!-- Фильтры -->
           </div>
 
@@ -41,5 +41,6 @@
           </section>
       </div>
     </main>
+  <script src="../src/main.js"></script>
   </body>
 </html>
