--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
           </section>
       </div>
     </main>
+  <script src="./sw.js"></script>
   <script src="./bundle.js"></script>
   </body>
 </html>
